--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-    "name": "olopsc-monorepo",
+    "name": "newgen-olopsc",
     "private": true, 
+    "packageManager": "npm@10.8.2",
     "scripts": {
       "build": "turbo run build",
       "dev": "turbo run dev",
