build web config for vercel (temp)

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "packageManager": "npm@10.8.2",
     "scripts": {
       "build": "turbo run build",
+      "build:web": "turbo run build --filter=web",
       "dev": "turbo run dev",
       "lint": "turbo run lint",
       "format": "prettier --write \"**/*.{ts,tsx,md}\""
