--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,7 +26,7 @@
     "@types/react": "^19.1",
     "eslint": "^9.28",
     "prettier": "^3.5",
-    "typescript": "^5.8",
-    "sanity": "^5.0.1"
+    "sanity": "^5.0.1",
+    "typescript": "^5.8"
   }
 }
