sanity schema types for pages

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,9 +16,11 @@
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "astro": "^5.16.6",
+    "lucide-astro": "^0.556.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "^4.1.18",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@sanity/client": "^5.0.1",
