--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "astro": "^5.16.6",
+    "astro-portabletext": "^0.13.0",
     "framer-motion": "^11.0.0",
     "lucide-astro": "^0.556.0",
     "lucide-react": "^0.556.0",
