--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "@sanity/vision": "^5.3.0",
+    "lucide-react": "^0.556.0",
     "react": "^19.1",
     "react-dom": "^19.1",
     "sanity": "^5.3.0",
